name:                migrate
version:             0.1.0.0
synopsis:            A database migrations library for haskell.
homepage:            https://github.com/dbp/migrate
license:             GPL-3
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
category:            Database
build-type:          Simple
cabal-version:       >=1.10



library
  hs-source-dirs:   src
  exposed-modules:
    Database.Migrate
  build-depends:
      base >= 4 && <= 5
    , postgresql-simple
    , snap
    , snap-core
    , containers
    , text
    , unix
    , mtl

executable migrate
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Database.Migrate
  build-depends:
      base >= 4 && <= 5
    , migrate
    -- transitive, as aeson is currently broken with newest scientific
    , scientific < 0.3
    , configurator
    , process
    , postgresql-simple
    , snap
    , snap-core
    , containers
    , text
    , unix
    , mtl
    , directory
  default-language:    Haskell2010